# git-demon

./: CLAUDE.md  Cargo.toml  LICENSE  justfile
.just/prompts/: commit-agent.md
benches/: render.rs
docs/: specification.md
docs/active/stories/: S-001.md  S-002.md  S-003.md  S-004.md  S-005.md  S-006.md  S-007.md
docs/active/tickets/: T-001-01.md  T-001-02.md  T-001-03.md  T-001-04.md  T-001-05.md  T-002-01.md  T-002-02.md  T-002-03.md  T-003-01.md  T-003-02.md  T-004-01.md  T-004-02.md  T-005-01.md  T-006-01.md  T-007-01.md  T-007-02.md  T-007-03.md  T-007-04.md  T-007-05.md
docs/active/work/T-001-01/: design.md  plan.md  progress.md  research.md  review.md  structure.md
docs/active/work/T-001-02/: design.md  plan.md  progress.md  research.md  review.md  structure.md
docs/active/work/T-001-03/: design.md  plan.md  progress.md  research.md  review.md  structure.md
docs/active/work/T-001-04/: design.md  plan.md  progress.md  research.md  review.md  structure.md
docs/active/work/T-001-05/: design.md  plan.md  progress.md  research.md  review.md  structure.md
docs/active/work/T-002-01/: design.md  plan.md  progress.md  research.md  review.md  structure.md
docs/active/work/T-002-02/: design.md  plan.md  progress.md  research.md  review.md  structure.md
src/: lib.rs  main.rs
src/git/: mod.rs  poller.rs  seed.rs  stats.rs
src/renderer/: effects.rs  font.rs  hud.rs  menu.rs  mod.rs  road.rs  road_table.rs  sky.rs  sprites.rs  terrain.rs
src/world/: camera.rs  mod.rs  objects.rs  road_segments.rs  speed.rs
tests/: tearing.rs
(+66 files in other folders)
